fixing alignment error again tp7

--- a/docs/recipe-minisite/styles.css
+++ b/docs/recipe-minisite/styles.css
@@ -48,8 +48,9 @@ body {
 
 #sites .card{
     color: black;
+    justify-content: flex-end;
+    text-align: center;
     align-items: center;
-    text-align: bottom;
 }
 
 #recipe1 {
